pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-entrypoints-www-redirect.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-tls-with-entrypoints
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"

spec:
  ingressClassName: nginx
  rules:
    - host: whoami.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
